--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,12 +76,12 @@ set -g message-attr bright
 # ステータスバーを設定する
 ## 左パネルを設定する
 set -g status-left-length 60
-# set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-left "#(~/repo/tmux-powerline/powerline.sh left)"
+set -g status-left "#[fg=pink]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+# set -g status-left "#(~/repo/tmux-powerline/powerline.sh left)"
 ## 右パネルを設定する
-set -g status-right-length 90
-# set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
-set -g status-right "#(~/repo/tmux-powerline/powerline.sh right)"
+set -g status-right-length 120
+set -g status-right "#[fg=green][%Y-%m-%d(%a) %H:%M]"
+# set -g status-right "#(~/repo/tmux-powerline/powerline.sh right)"
 ## ステータスバーのUTF-8サポートを有効にする
 set -g status-utf8 on
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
