--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,10 @@ bind | split-window -h
 # - でペインを横に分割する
 bind - split-window -v
 
+# shell
+set-option -g default-shell /bin/zsh
+set-option -g default-command /bin/zsh
+
 # Vimのキーバインドでペインを移動する
 bind h select-pane -L
 bind j select-pane -D
@@ -76,13 +80,14 @@ set -g message-attr bright
 # ステータスバーを設定する
 ## 左パネルを設定する
 set -g status-left-length 60
-set -g status-left "#[fg=pink]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "#[fg=yellow]#H #[fg=cyan]#P"
 # set -g status-left "#(~/repo/tmux-powerline/powerline.sh left)"
 ## 右パネルを設定する
 set -g status-right-length 120
 set -g status-right "#[fg=green][%Y-%m-%d(%a) %H:%M]"
 # set -g status-right "#(~/repo/tmux-powerline/powerline.sh right)"
 ## ステータスバーのUTF-8サポートを有効にする
+setw -g utf8 on
 set -g status-utf8 on
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
 set -g status-interval 60
