tmux.conf updated

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # prefixキーをC-zに変更する
-set -g prefix C-z
+set-option -g prefix C-z
 
 # C-bのキーバインドを解除する
 unbind C-b
@@ -17,7 +17,7 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # C-z*2でtmux内のプログラムにC-aを送る
-bind C-z send-prefix
+# bind C-z send-prefix
 
 # | でペインを縦に分割する
 bind | split-window -h
@@ -44,10 +44,10 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # マウス操作を有効にする
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# setw -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
 
 # 256色端末を使用する
 set -g default-terminal "screen-256color"
@@ -80,12 +80,10 @@ set -g message-attr bright
 # ステータスバーを設定する
 ## 左パネルを設定する
 set -g status-left-length 60
-set -g status-left "#[fg=yellow]#H #[fg=cyan]#P"
-# set -g status-left "#(~/repo/tmux-powerline/powerline.sh left)"
+set-option -g status-left "#[fg=white,bg=black]#H#[fg=white]:#[fg=white][#P]"
 ## 右パネルを設定する
 set -g status-right-length 120
-set -g status-right "#[fg=green][%Y-%m-%d(%a) %H:%M]"
-# set -g status-right "#(~/repo/tmux-powerline/powerline.sh right)"
+set-option -g status-right "#[fg=green][%Y-%m-%d(%a) %H:%M]"
 ## ステータスバーのUTF-8サポートを有効にする
 setw -g utf8 on
 set -g status-utf8 on
