tmux.conf updated

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -99,9 +99,29 @@ set -g status-position top
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
-# setw -g mode-keys vi
+set-window-option -g mode-keys vi
+# Prefix+v でコピーモード開始
+bind-key -t vi-copy v begin-selection
+# Prefix+p でペースト
+bind-key p paste-buffer
 ## クリップボード共有を有効にする
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+bind-key -t vi-copy C-v rectangle-toggle
+bind-key -t vi-copy V select-line
+bind-key -t vi-copy C-a start-of-line
+bind-key -t vi-copy C-e end-of-line
+bind-key -t vi-copy w next-word
+bind-key -t vi-copy e next-word-end
+bind-key -t vi-copy b previous-word
+bind-key -t vi-copy g top-line
+bind-key -t vi-copy G bottom-line
+bind-key -t vi-copy / search-forward
+bind-key -t vi-copy ? search-backward
+bind-key -t vi-copy C-n page-up
+bind-key -t vi-copy C-f page-down
+bind-key -t vi-copy C-u scroll-up
+bind-key -t vi-copy C-d scroll-down
+
 ## コピーモードの操作をvi風に設定する
 # bind-key -t vi-copy v begin-selection
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
