--- a/.tmux.conf
+++ b/.tmux.conf
@@ -126,3 +126,10 @@ bind-key -t vi-copy C-d scroll-down
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+set -g @tpm<sub>plugins</sub> '
+  tmux-plugins/tpm
+'
+
+run-shell '~/.tmux/plugins/tpm/tpm'
+
