--- a/.tmux.conf
+++ b/.tmux.conf
@@ -127,3 +127,7 @@ bind-key -t vi-copy C-d scroll-down
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
+set -g @plugin 'tmux-plugins/tpm'
+
+run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/psql-history'
