emacsd updated psqlrc updated

--- a/.psqlrc
+++ b/.psqlrc
@@ -4,6 +4,8 @@
 -- デフォルトでは表形式のフォーマット(1行目がヘッダ)になるが、
 -- データが多い時はより読みやすいように拡張テーブル形式で表示
 \x auto
+-- 各SQL文にかかる時間（ミリ秒単位）の表示
+\timing on
 -- 詳しいエラー表示
 \set VERBOSITY verbose
 -- データベースごとにヒストリファイルを作る
@@ -11,8 +13,9 @@
 -- エディタ
 \set PSQL_EDITOR /usr/bin/vim
 \setenv EDITOR /usr/bin/vim
--- プロンプト
-\set PROMPT1 '%n@%m %~%R%# '
+-- プロンプト1
+\set PROMPT1 '[%[%033[0;33;40m%]%n%[%33[0m%]@%[%033[0;32;40m%]%M%[%33[0m%]] %[%033[0;34;40m%]%/ %[%33[0m%]in %[%33[0;36;40m%]%`pwd` %[%33[0m%][%`date +"%H:%M:%S"`]\n%R%# '
+\set PROMPT2 '%R%#'
 --
 \pset border 0
 --
