--- a/.tmux.conf
+++ b/.tmux.conf
@@ -85,8 +85,8 @@ set-option -g status-left "#[fg=white,bg=black]#H#[fg=white]:#[fg=white][#P]"
 set -g status-right-length 120
 set-option -g status-right "#[fg=green][%Y-%m-%d(%a) %H:%M]"
 ## ステータスバーのUTF-8サポートを有効にする
-setw -g utf8 on
-set -g status-utf8 on
+# setw -g utf8 on
+# set -g status-utf8 on
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
 set -g status-interval 60
 ## ウィンドウリストの位置を中心寄せにする
