--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -86,3 +86,11 @@ on_cmd = ['HTTPClientDoRequest']
 [[plugins]]
 repo = 'hdima/python-syntax'
 on_ft = ['py']
+
+[[plugins]]
+repo = 'flyinshadow/php_localvarcheck.vim'
+on_ft = ['php']
+
+[[plugins]]
+repo = 'beanworks/vim-phpfmt'
+on_ft = ['php']
