--- a/.tmux.conf
+++ b/.tmux.conf
@@ -118,7 +118,7 @@ bind-key -T copy-mode-vi C-d send-keys -X scroll-down
 
 ## コピーモードの操作をvi風に設定する
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
