--- a/.tmux.conf
+++ b/.tmux.conf
@@ -121,4 +121,6 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
+if-shell 'test "$(uname -s)" = Darwin' "set-option -g default-command 'reattach-to-user-namespace -l ${SHELL}'"
+
+set -g history-limit 10000
