--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -106,3 +106,7 @@ on_ft = ['javascript']
 [[plugins]]
 repo = 'Shougo/vimshell.vim'
 on_cmd = ['VimShell', 'VimShellTab']
+
+[[plugins]]
+repo = 'rizzatti/dash.vim'
+on_cmd = ['Dash','Dash!']
