--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,10 +117,18 @@ bind-key -T copy-mode-vi C-u send-keys -X scroll-up
 bind-key -T copy-mode-vi C-d send-keys -X scroll-down
 
 ## コピーモードの操作をvi風に設定する
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+bind-key -T copy-mode-vi y     send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-if-shell 'test "$(uname -s)" = Darwin' "set-option -g default-command 'reattach-to-user-namespace -l ${SHELL}'"
+bind-key -T copy-mode C-w send -X copy-pipe-and-cancel 'pbcopy'
+bind-key -T copy-mode C-u send -X page-up
+bind-key -T copy-mode C-d send -X page-down
+
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# 
+# if-shell 'test "$(uname -s)" = Darwin' "set-option -g default-command 'reattach-to-user-namespace -l ${SHELL}'"
 
 set -g history-limit 10000
