--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -246,3 +246,6 @@ repo = 'pearofducks/ansible-vim'
 [[plugins]]
 repo = 'ozelentok/denite-gtags'
 depends = ['denite.nvim']
+
+[[plugins]]
+repo = 'jistr/vim-nerdtree-tabs'
