--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,35 +1,44 @@
-# prefixキーをC-zに変更する
+set -g @plugin 'tmux-plugins/tpm'
+
+# set -g @plugin 'Morantron/tmux-fingers'
+
+set -g @plugin 'rafi/tmux-pass'
+
+set -g @plugin 'yardnsm/tmux-1password'
+
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+
+set -g @plugin 'xamut/tmux-weather'
+
+set -g @plugin 'laktak/extrakto'
+
+set -g @plugin 'sainnhe/tmux-fzf'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+set -g @plugin 'schasse/tmux-jump'
+
 set-option -g prefix C-z
 
-# C-bのキーバインドを解除する
 unbind C-b
 
-# キーストロークのディレイを減らす
 set -sg escape-time 1
 
-# ウィンドウのインデックスを1から始める
 set -g base-index 1
 
-# ペインのインデックスを1から始める
 setw -g pane-base-index 1
 
-# 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# C-z*2でtmux内のプログラムにC-aを送る
-# bind C-z send-prefix
-
-# | でペインを縦に分割する
 bind | split-window -h
 
-# - でペインを横に分割する
 bind - split-window -v
 
-# shell
 set-option -g default-shell /bin/zsh
-set-option -g default-command /bin/zsh
+set-option -g default-command "/bin/zsh -l"
 
-# Vimのキーバインドでペインを移動する
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -37,67 +46,30 @@ bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-# Vimのキーバインドでペインをリサイズする
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# マウス操作を有効にする
 setw -g mouse on
 
-# 256色端末を使用する
-set -g default-terminal "screen-256color"
+set -g status-interval 5
 
-# ステータスバーの色を設定する
-set -g status-fg white
-set -g status-bg black
-
-# ウィンドウリストの色を設定する
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-# アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
-
-# ペインボーダーの色を設定する
-set -g pane-border-fg green
-set -g pane-border-bg black
-# アクティブなペインを目立たせる
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
-
-# コマンドラインの色を設定する
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-
-# ステータスバーを設定する
-## 左パネルを設定する
-set -g status-left-length 60
-set-option -g status-left "#[fg=white,bg=black]#H#[fg=white]:#[fg=white][#P]"
-## 右パネルを設定する
-set -g status-right-length 120
-set-option -g status-right "#[fg=green][%Y-%m-%d(%a) %H:%M]"
-## ステータスバーのUTF-8サポートを有効にする
-# setw -g utf8 on
-# set -g status-utf8 on
-## リフレッシュの間隔を設定する(デフォルト 15秒)
-set -g status-interval 60
-## ウィンドウリストの位置を中心寄せにする
 set -g status-justify centre
-## ヴィジュアルノーティフィケーションを有効にする
+
+setw -g automatic-rename on
 setw -g monitor-activity on
 set -g visual-activity on
-## ステータスバーを上部に表示する
-set -g status-position top
 
-# コピーモードを設定する
-## viのキーバインドを使用する
+set -g focus-events on
+
+set -g renumber-windows on  
+set -g set-titles on
+set -g set-titles-string '#h [#S] (#I) #W'
+
+set-option -g status-position top
+
 set-window-option -g mode-keys vi
-# Prefix+v でコピーモード開始
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
@@ -116,19 +88,64 @@ bind-key -T copy-mode-vi C-f send-keys -X page-down
 bind-key -T copy-mode-vi C-u send-keys -X scroll-up
 bind-key -T copy-mode-vi C-d send-keys -X scroll-down
 
-## コピーモードの操作をvi風に設定する
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
-bind-key -T copy-mode-vi y     send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-
-bind-key -T copy-mode C-w send -X copy-pipe-and-cancel 'pbcopy'
-bind-key -T copy-mode C-u send -X page-up
-bind-key -T copy-mode C-d send -X page-down
-
-# bind-key -T copy-mode-vi v send-keys -X begin-selection
-# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# 
-# if-shell 'test "$(uname -s)" = Darwin' "set-option -g default-command 'reattach-to-user-namespace -l ${SHELL}'"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+bind-key P run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 
 set -g history-limit 10000
+
+# set-option -g default-terminal tmux-256color
+set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",tmux-256color:RGB"
+
+set-option -g status-right-length 150
+
+# run-shell "powerline-daemon -q"
+# source "/home/skjkw/.anyenv/envs/pyenv/versions/3.8.2/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf"
+# source /usr/share/powerline/bindings/tmux/powerline.conf
+
+# tmux prefix highlight 
+set -g @prefix_highlight_fg 'white'
+set -g @prefix_highlight_bg 'cyan'
+
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_prompt 'cyan'
+
+# tmux-pass
+set -g @pass-key b
+set -g @pass-copy-to-clipboard on
+set -g @pass-window-size 10
+
+# tmux-fingers
+set -g @fingers-key F
+
+# tmux-1password
+set -g @1password-key X
+set -g @1password-account 'my'
+set -g @1password-vault 'shun'
+set -g @1password-copy-to-clipboard 'on'
+
+set-option -g status on
+set-option -g status-keys vi
+set-option -g status-style fg=colour136,bg=colour235
+set-option -g status-left-length 20
+set-option -g status-left-style default
+set-option -g status-left "#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r)#[default]"
+set-option -g status-right-length 140
+set-option -g status-right-style default
+set-option -g status-right "#[fg=green,bg=default,bright]#(tmux-mem-cpu-load --colors --interval 2)  "
+set-option -ag status-right "#[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') #{weather} "
+set-option -ag status-right " #[fg=white,bg=default] %p %k:%M#[default] #[fg=blue]  %Y-%m-%d %a"
+
+set -g window-status-style fg=colour244,bg=default,dim
+set -g window-status-current-style fg=colour166,bg=default,bright
+
+set-option -g @tmux-weather-location "Osaka"
+set-option -g @tmux-weather-format "%l:+%c+%t"
+set-option -g @tmux-weather-units "m"
+
+set -g @jump-bg-color '\e[0m\e[90m'
+set -g @jump-fg-color '\e[1m\e[31m'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
